fixing global views
mobile and desktop view look weird

--- a/styles.css
+++ b/styles.css
@@ -149,8 +149,8 @@ input[type=button] {
 }
 
 .slider {
-  width: 50%;
-  height: 50%;
+  width: 1000px;
+  height: 600px;
   background-color: yellow;
   margin-left: auto;
   margin-right: auto;
@@ -159,7 +159,7 @@ input[type=button] {
   overflow: hidden;
 }
 .image-container {
-  width: 200%;
+  width: 4000px;
   background-color: pink;
   height: 50%;
   clear: both;
